# CodeStatistics

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: _update_config.py  build.py  perf_test.py
scripts/update_config/: main.py
scripts/update_config/models/: config_model.py  linguis_models.py
src/: counter.py  language_config.py  main.py
src/code_stat/: __main__.py  counter.py
src/code_stat/config/: languages.yml
src/stats_code/: __main__.py  counter.py  language_config.py  render.py  utils.py
src/stats_code/config/: _default.yml  default.yml  default.yml.j2  languages.yml
