[project]
name = "code-stat"
version = "0.1.0"
description = "A full python tool to gather statistics from your codebase."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
code-stat = "code_stat.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["code_stat"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
code_stat = ["config/*.yml"]